Remove fixed scrollbars if not needed

--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ p.par {
 
 #content-container {
   flex-grow: 1;
-  overflow: scroll;
+  overflow: auto;
   width: 100%;
 }
 
